--- a/css/global.css
+++ b/css/global.css
@@ -21,12 +21,17 @@
   box-sizing: border-box;
 }
 
-html,
+html {
+  height: 100%;
+}
+
 body {
-  background-color: #f5f5f5;
+  min-height: 100%;
   color: #333;
   font-family: "Tahoma", "Hongmengti", sans-serif;
   overflow-x: hidden;
+  position: relative;
+  background: transparent;
 }
 
 .h1,
@@ -46,6 +51,18 @@ h6 {
 .p {
   font-family: "Tahoma", sans-serif;
   font-size: 1.125rem;
+}
+
+.bg-video {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+  object-fit: cover;
+  opacity: 0.3;
+  pointer-events: none;
 }
 
 main {
@@ -77,5 +94,20 @@ main {
 
   .intro-left {
     padding: 1rem 0 0.5rem;
+  }
+}
+
+/* media query for video-bg */
+@media (min-aspect-ratio: 16/9) {
+  .bg-video {
+    width: 100%;
+    height: auto;
+  }
+}
+
+@media (max-aspect-ratio: 16/9) {
+  .bg-video {
+    width: auto;
+    height: 100%;
   }
 }
