--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,3 @@
-/* Import Google Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&display=swap");
 
 /* root */
@@ -10,14 +9,12 @@
 /* fonts */
 @font-face {
   font-family: "Hongmengti";
-  src: url("/portfolio/fonts/Print-Hongmeng-style.ttf") format("truetype"),
-    url("/fonts/Print-Hongmeng-style.ttf") format("truetype");
+  src: url("../Fonts/Print-Hongmeng-style.ttf") format("truetype");
   font-display: swap;
 }
 @font-face {
   font-family: "Tahoma";
-  src: url("/portfolio/fonts/tahoma.ttf") format("truetype"),
-    url("/fonts/tahoma.ttf") format("truetype");
+  src: url("../Fonts/tahoma.ttf") format("truetype");
   font-display: swap;
 }
 
