--- a/css/header-nav.css
+++ b/css/header-nav.css
@@ -5,7 +5,7 @@
   align-items: center;
   max-width: 100vw;
   padding: 1rem clamp(1rem, 5vw, 2rem);
-  background-color: rgba(0, 0, 0, 0.9); /* Changed to semi-transparent */
+  background-color: rgb(0, 0, 0);
   position: sticky;
   top: 0;
   z-index: 1000;
